frontend/test/should_pass/basic_060.grg
using basic_model_002;

rule r {
	x : A;
	y : B;
	z : C;

	replace {
		eval {
			y.ib = 42;
		}
	}
}

