frontend/test/should_fail/enum_012.grg
using enum_model_006;

rule r {

	replace {
	}
}



